# myHome

./: .gitignore  AndroidManifest.xml  CLOUD_SYNC_GUIDE.md  Cargo.toml  Info.plist  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs
src/db/: mod.rs  schema.sql
src/modules/: cloud.rs  dashboard.rs  dining.rs  finance.rs  gifts.rs  grocery.rs  household.rs  maintenance.rs  mod.rs  registry.rs  settings.rs  travel.rs
tests/: cloud_tests.rs  integration_tests.rs
ui/: main.slint
