[package]
name = "myhome"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"

[build-dependencies]
slint-build = "1.9.1"
